# sinusboard

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
sinusboard/: __main__.py
sinusboard/client/: __init__.py
sinusboard/server/: __init__.py
sinusboard/server/static/: service-worker.js
sinusboard/server/static/css/: index.css
sinusboard/server/static/js/: index.js
sinusboard/server/templates/: index.html
