[tool.poetry]
name = "sinusboard"
version = "1.0"
readme = "README.md"
description = "A Sinusbot API wrapper for the InfernoLAN teamspeak."
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
requests = "^2.25.1"
youtube_dl = "^2021.2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
